--- a/css/style.css
+++ b/css/style.css
@@ -14,12 +14,8 @@ body{
 
 /*-------------------------------------------------------------------------------------------------*/
 
-.hobbies, .experiencia, footer{
-    background-color: #888888;
-}
-
-.skills, .formacion, .contacto{
-    background-color: #606060;
+.presentacion,.skills, .hobbies, .experiencia, .formacion, .contacto, .footer{
+    background-color: #04030cd3;
 }
 
 .titulo-seccion{
@@ -52,11 +48,18 @@ a{
     color: #cac7d7;
 }
 
+.skills, .hobbies{
+    height: 300px;
+}
+
+.skills li, .hobbies li, .navegacion{
+    background: #383140;
+}
+
 /*-------------------------------------------------------------------------------------------------*/
 
 .navegacion{
     padding: 10px;
-    background: #383140;
 }
 
 .navegacion li{
@@ -87,7 +90,6 @@ a{
 /*-------------------------------------------------------------------------------------------------*/
 
 .presentacion{
-    background-color: #04030cd3;
     padding: 30px 10px 40px 10px;
 }
 
@@ -160,25 +162,34 @@ a{
 
 .skills li{
     text-align: left;
+    height: 100px;
     width: 100px;
-    border: 1px solid #ffffff;
+    border: 1px solid #cac7d7;
+    padding: 5px;
+    margin-top: 120px;
+    margin-bottom: 5px;
 }
 
 .skills img{
-    width: 30px;
-    /* height: 30px;     */
+    width: 50px;
+    margin-top: 30px;
 }
 
 /*-------------------------------------------------------------------------------------------------*/
 
 .hobbies li{
+    margin-top: 120px;
     text-align: left;
-    width: (200px/5);
-    border: 1px solid #ffffff;
+    height: 100px;
+    width: 125px;
+    border: 1px solid #cac7d7;
+    padding: 5px;
 }
 
 .hobbies img{
-    height: 30px;
+    height: 40px;
+    margin-top: 35px;
+    margin-bottom: 5px;
 }
 
 /*-------------------------------------------------------------------------------------------------*/
