--- a/css/style.css
+++ b/css/style.css
@@ -39,9 +39,79 @@
 .link-menu{
     font-size: 10px;
     text-transform: uppercase;
-    color: #bbbbbb;
 }
 
 .presentacion{
-    background-image: url(../media/bg-presentacion1.jpg);
+    position: relative;
+}
+
+.img-bg-presentacion{
+    width: 100%;
+}
+
+.pre-box-main{
+    position: absolute;
+    top: 0; left: 0; right: 0; bottom: 0;
+    margin: auto;
+    background: #21201eb8;
+    padding: 40px;
+}
+
+.pre-box-1{
+    position: relative;
+    /* border: 1px solid #3dbfb3; */
+    text-align: center;
+    opacity: 100%;
+}
+
+.contorno-favicon{
+    position: relative;
+    margin: 0 auto;
+    z-index: 5;
+    width: 290px;
+    height: 290px;
+    border-radius: 100%;
+    background-color: #3dbfb321;
+}
+
+.favicon{
+    position: relative;
+    margin: 0 auto;
+    top: -270px;
+    z-index: 10;
+    width: 230px;
+    border: 7px solid #3dbfb3;
+    border-radius: 100%;
+}
+
+.pre-info{
+    position: relative;
+    margin: 0 auto;
+    top: -400px;
+    width: 320px;
+    height: 300px;
+    background-color: #21201f;
+    border-radius: 5px;
+}
+
+.pre-contenido{
+    position: absolute;
+    margin-top: 200px;
+    margin-left: 90px;
+    /* border: 1px solid #3dbfb3; */
+}
+
+/* .pre-nombre{
+    position: relative;
+    top: 100;
+}
+
+.pre-oficio{
+    position: relative;
+} */
+
+.pre-icon{
+    position: relative;
+    display: inline-block;
+    width: 20px;
 }
