--- a/assets/css/container.css
+++ b/assets/css/container.css
@@ -1,7 +1,8 @@
 .container{
-    width: 940px;
-    margin: 0 auto;
     font-family: 'Righteous', cursive;
-    margin-top: 10px;
+    margin: 0 auto;
     margin-bottom: 10px;
+    margin-top: 10px;
+    position: relative;
+    width: 940px;
 }
