--- a/assets/css/presentacion/presentacion-imagen.css
+++ b/assets/css/presentacion/presentacion-imagen.css
@@ -1,6 +1,6 @@
 .presentacion__imagen{
     background: url(../../img/presentacion.jpg) center / cover;
-    height: 80vh;
+    height: 614.38px;
     position: relative;
     width: 100%;
 }
