--- a/assets/css/presentacion/box/box-favicon.css
+++ b/assets/css/presentacion/box/box-favicon.css
@@ -1,9 +1,11 @@
 .box__favicon{
-    position: relative;
-    margin: 0 auto;
-    top: -270px;
-    z-index: 10;
-    width: 230px;
+    background: url(../../../img/favicon.jpg) center / cover;
     border: 7px solid #3dbfb3;
     border-radius: 100%;
+    height: 230px;
+    margin: 0 auto;
+    position: relative;
+    top: -270px;
+    width: 230px;
+    z-index: 10;
 }
