--- a/assets/css/sobre-mi/sobre-mi-btn-descargar.css
+++ b/assets/css/sobre-mi/sobre-mi-btn-descargar.css
@@ -1,5 +1,8 @@
 .sobre-mi__btn-descargar{
+    height: 30px;
+    border: 1px solid #bbbbbb;
+    padding: 10px 0 0 10px;
+    width: 130px;
     margin: 50px auto 0 auto;
-    position: relative;
     display: flex;
 }
