--- a/assets/css/sobre-mi/sobre-mi-btn-descargar.css
+++ b/assets/css/sobre-mi/sobre-mi-btn-descargar.css
@@ -1,8 +1,21 @@
 .sobre-mi__btn-descargar{
-    height: 30px;
-    border: 1px solid #bbbbbb;
-    padding: 10px 0 0 10px;
-    width: 130px;
-    margin: 50px auto 0 auto;
+    border: 2px solid #bbbbbb;
     display: flex;
+    height: 30px;
+    margin: 50px auto 0 auto;
+    padding: 10px 0 0 10px;
+    position: relative;
+    width: 130px;
+    z-index: 10;
+}
+
+.sobre-mi__btn-descargar:hover{
+    border: 2px solid #3dbfb3;
+    cursor: pointer;
+}
+
+.sobre-mi__btn-descargar:active{
+    border: 2px solid #3dbfb3;
+    background: #3dbfb3;
+    cursor: pointer;
 }
