--- a/assets/css/experiencia/experiencia-lista.css
+++ b/assets/css/experiencia/experiencia-lista.css
@@ -1,5 +1,6 @@
 .experiencia__lista{
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
+    margin-top: 30px;
     position: relative;
 }
