--- a/assets/css/container.css
+++ b/assets/css/container.css
@@ -1,8 +1,7 @@
 .container{
-    font-family: 'Righteous', cursive;
-    margin: 0 auto;
-    margin-bottom: 10px;
-    margin-top: 10px;
-    position: relative;
-    width: 940px;
+    border-radius: 5px;
+    box-shadow: var(--shadow-container);
+    font-family: var(--righteous);
+    margin: 10px 0;
+    width: 80%;
 }
