--- a/assets/css/presentacion/presentacion-box.css
+++ b/assets/css/presentacion/presentacion-box.css
@@ -1,6 +1,6 @@
 .presentacion__box{
-    background: #21201eb8;
-    height: 614.38px;
+    background: var(--background-transparencia);
+    height: inherit;
     position: absolute;
-    width: 100%;
+    width: inherit;
 }
