--- a/assets/css/presentacion/presentacion-central.css
+++ b/assets/css/presentacion/presentacion-central.css
@@ -1,10 +1,7 @@
 .presentacion__central{
-    bottom: 0;
-    height: 445px;
-    left: 0;
-    margin: auto auto;
-    position: absolute;
-    right: 0;
-    top: 0;
-    width: 320px;
+    align-items: center;
+    display: flex;
+    flex-direction: column;
+    height: inherit;
+    width: 40%;
 }
