--- a/assets/css/presentacion/box/box-contorno.css
+++ b/assets/css/presentacion/box/box-contorno.css
@@ -1,13 +1,8 @@
 .box__contorno{
-    background-color: #3dbfb240;
+    background-color: var(--background-distintivo-transparencia);
     border-radius: 100%;
-    bottom: 0;
     height: 290px;
-    left: 0;
-    margin: auto auto;
     position: absolute;
-    right: 0;
-    top: 0;
     width: 290px;
     z-index: 5;
 }
