--- a/assets/css/presentacion/presentacion-box.css
+++ b/assets/css/presentacion/presentacion-box.css
@@ -1,6 +1,8 @@
 .presentacion__box{
     background: var(--background-transparencia);
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
     height: inherit;
-    position: absolute;
     width: inherit;
 }
