--- a/assets/css/sobre-mi/sobre-mi-icon-descargar.css
+++ b/assets/css/sobre-mi/sobre-mi-icon-descargar.css
@@ -2,5 +2,5 @@
     background: url(../../img/sobre-mi-icon/icon-download.png) no-repeat center / cover;
     height: 15px;
     width: 15px;
-    margin-left: 5px;
+    margin: 0 10px;
 }
