--- a/assets/css/sobre-mi/sobre-mi-item.css
+++ b/assets/css/sobre-mi/sobre-mi-item.css
@@ -1,6 +1,8 @@
 .sobre-mi__item{
     background: #3a3a3a;
     border-radius: 5px;
+    display: flex;
+    flex-direction: column;
     margin: 5px;
     padding: 5px;
 }
