--- a/assets/css/sobre-mi/sobre-mi-titulo.css
+++ b/assets/css/sobre-mi/sobre-mi-titulo.css
@@ -1,7 +1,5 @@
 .sobre-mi__titulo{
     text-align: center;
-    line-height: 50px;
-    font-size: 30px;
+    font-size: 1.875rem;
     text-transform: lowercase;
-    margin: 10px 0;
 }
