corregi CSS de Skills y empece con la seccion de experiencias

--- a/assets/css/experiencia.css
+++ b/assets/css/experiencia.css
@@ -1,5 +1,4 @@
 .experiencia{
-    background: #21201f;
-    padding: 30px 70px 100px 70px;
+    background: var(--background-gris-oscuro);
     position: relative;
 }
