--- a/assets/css/skills/skills-box-hard-soft.css
+++ b/assets/css/skills/skills-box-hard-soft.css
@@ -1,6 +1,8 @@
 .skills__box-hard-soft{
     display: flex;
     flex-direction: row;
+    gap: 1.875rem;
     justify-content: space-between;
     margin-top: 30px;
+    width: 100%;
 }
