--- a/assets/css/skills.css
+++ b/assets/css/skills.css
@@ -1,5 +1,6 @@
 .skills{
-    background: #303030;
-    padding: 30px 70px 100px 70px;
-    position: relative;
+    background: var(--background-gris-claro);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
