--- a/assets/css/skills/skills-soft/skills-soft-barras.css
+++ b/assets/css/skills/skills-soft/skills-soft-barras.css
@@ -84,6 +84,7 @@
 .porcentaje{
     color: #ffffff;
     font-size: 11px;
+    line-height: initial;
     margin-right: 2px;
     position: relative;
     text-align: right;
