corregi CSS de la seccion experiencia

--- a/assets/css/experiencia/experiencia-box-links.css
+++ b/assets/css/experiencia/experiencia-box-links.css
@@ -1,7 +1,5 @@
 .experiencia__box-links{
     display: flex;
     flex-direction: row;
-    margin-top: 30px;
-    position: relative;
-    width: 100%;
+    margin-top: .5rem;
 }
