--- a/assets/css/experiencia/experiencia-box-texto-parrafo.css
+++ b/assets/css/experiencia/experiencia-box-texto-parrafo.css
@@ -1,7 +1,7 @@
 .experiencia__box-texto-parrafo{
     font-style: italic;
-    letter-spacing: .5px;
-    line-height: 20px;
-    margin-top: 5px;
-    word-spacing: 1px;
+    letter-spacing: .031rem;
+    line-height: 1.25rem;
+    margin-top: .31rem;
+    word-spacing: .063rem;
 }
