--- a/assets/css/experiencia.css
+++ b/assets/css/experiencia.css
@@ -1,4 +1,6 @@
 .experiencia{
     background: var(--background-gris-oscuro);
-    position: relative;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
