--- a/assets/css/experiencia/experiencia-box-texto-tiulo.css
+++ b/assets/css/experiencia/experiencia-box-texto-tiulo.css
@@ -1,5 +1,5 @@
 .experiencia__box-texto-titulo{
-    color: #727070;
+    color: var(--colot-titulo-experiencia);
     font-size: 1.5rem;
     text-transform: capitalize;
 }
