--- a/assets/css/experiencia/experiencia-item.css
+++ b/assets/css/experiencia/experiencia-item.css
@@ -1,8 +1,8 @@
 .experiencia__item{
+    background: var(--background-gris-claro);
+    box-shadow: var(--shadow-container);
     display: flex;
-    flex-direction: row;
-    height: 180px;
-    margin-bottom: 20px;
-    position: relative;
-    width: 100%;
+    flex-direction: column;
+    padding: 1rem;
+    width: 44%;
 }
