--- a/assets/css/formacion/formacion-icons.css
+++ b/assets/css/formacion/formacion-icons.css
@@ -1,7 +1,7 @@
 .formacion__icons{
-    height: 60px;
+    height: 3.75rem;
     opacity: 50%;
-    width: 60px;
+    width: 3.75rem;
 }
 
 .formacion__icons--alura{
