--- a/assets/css/sobre-mi/sobre-mi-intereses.css
+++ b/assets/css/sobre-mi/sobre-mi-intereses.css
@@ -1,6 +1,7 @@
 .sobre-mi__intereses{
+    align-items: flex-end;
     display: flex;
     flex-direction: column;
-    align-items: flex-end;
+    min-width: 16.875rem;
     width: 50%;
 }
