empece con el responsivo

--- a/assets/css/contacto.css
+++ b/assets/css/contacto.css
@@ -1,5 +1,6 @@
 .contacto{
-    background: #21201f;
-    padding: 30px 70px 100px 70px;
-    position: relative;
+    background: var(--background-gris-oscuro);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
