--- a/assets/css/contacto/contacto-formulario.css
+++ b/assets/css/contacto/contacto-formulario.css
@@ -1,6 +1,6 @@
 .contacto__formulario{
     display: flex;
     flex-direction: column;
-    padding: 0 50px;
     margin-top: 30px;
+    width: 70%;
 }
