--- a/assets/css/contacto/contacto-input.css
+++ b/assets/css/contacto/contacto-input.css
@@ -1,10 +1,9 @@
 .contacto__input{
-    height: 30px;
-    color: #000000;
+    height: 1.875rem;
+    color: #000;
 }
 
 .contacto__input--text-area{
-    height: 200px;
-    color: #000000;
-
+    height: 12.5rem;
+    color: #000;
 }
