--- a/assets/css/responsivo.css
+++ b/assets/css/responsivo.css
@@ -1,11 +1,78 @@
 /* Extra small devices (phones, 600px and down) */
 @media only screen and (max-width: 600px) {
-    
+    .menu__nav{
+        display: none;
+    }
+
+    .hamburguesa{
+        display: flex;
+    }
+
+    .presentacion{
+        height: 500px;
+    }
+
+    .presentacion__central{
+        width: 100%;
+    }
+
+    .box__contorno-avatar{
+        top: 100px
+    }
+
+    .box__contenido{
+        border-radius: initial;
+    }
+
+    .sobre-mi{
+        padding: 30px 1.3rem 30px 1.3rem;
+    }
+
+    .experiencia__item{
+        width: 100%;
+    }
+
+    .experiencia__link--demo{
+        display: none;
+    }
+
+    .formacion__item{
+        width: 100%;
+    }
+
+    .contacto__formulario{
+        width: 100%;
+    }
+
+    .footer{
+        align-content: center;
+        padding: 1rem;
+    }
+
+    .footer__lista{
+        display: none;
+    }
+
+    .footer__repositorio{
+        display: flex;
+    }
 }
 
-/* Small devices (portrait tablets and large phones, 600px and up) */
-@media only screen and (min-width: 600px) {
+/* Small devices (portrait tablets and large phones, 601px and up) */
+@media only screen and (min-width: 601px) {
+    
+    .hamburguesa, .hamburguesa-container{
+        display: none;
+        width: 0px;
+    }
+}
 
+/* Small devices (portrait tablets and large phones, 665px and up) */
+@media only screen and (max-width: 665px) {
+    
+    .experiencia__item{
+        width: 100%;
+    }
 }
 
 /* Medium devices (landscape tablets, 768px and up) */
@@ -20,7 +87,7 @@
     .menu{
         border-radius: initial;
     }
-    .sobre-mi,
+    
     .skills,
     .experiencia,
     .formacion,
@@ -48,6 +115,10 @@
         width: 100%;
     }
 
+    .experiencia__link--demo{
+        display: none;
+    }
+
     .skills__box-hard-soft{
         gap: 3rem;
     }
@@ -58,8 +129,6 @@
 
     .footer{
         border-radius: initial;
-        flex-direction: column;
-        align-items: center;
     }
 
     .footer__repositorio{
@@ -67,9 +136,19 @@
     }
 }
 
+/* Large devices (laptops/desktops, 1194px and up) */
+@media only screen and (max-width: 1194px) {
+    .footer{
+        flex-direction: column;
+        align-items: center;
+    }
+}
+
 /* Large devices (laptops/desktops, 992px and up) */
 @media only screen and (min-width: 992px) {
-
+    .hamburguesa{
+        display: none;
+    }
 }
 
 /* Extra large devices (large laptops and desktops, 1200px and up) */
