--- a/assets/css/desplegar-nav.css
+++ b/assets/css/desplegar-nav.css
@@ -1,27 +1,49 @@
-.desplegar-nav{
-    background: #000;
+.nav-movile{
+    background: var(--background-menu-desplegable);
     display: inline;
     position: absolute;
-    height: auto;
-    width: auto;
+    height: 100vh;
+    width: 67vw;
     top: 0;
     right: 0;
     z-index: 30;
 }
 
-.lista-vertical{
+.lista-movile{
     flex-direction: column;
 }
 
-.item-total{
-    border-bottom: .9px solid var(--color-distintivo);
-    text-align: center;
-    /* padding: 1rem 1rem; */
+.item-movile{
+    border-bottom: .9px solid var(--background-gris-oscuro);
+    padding-left: 1rem;
+    text-align: left;
     width: 100%;
 }
 
-.link-rojo{
+.item-movile:first-child{
+    padding-top: 1rem;
+}
+
+.link-movile{
+    color: #000;
     line-height: 1.7rem;
-    font-size: 1.5rem;
+    font-size: 1rem;
+    font-family: var(--sans-pro);
+    text-transform: lowercase;
+    width: 100%;
+}
+
+.btn-ocultar-movile{
+    align-items: center;
+    background: none;
+    border: none;
+    color: var(--background-gris-claro);
+    display: flex;
+    font-size: 1rem;
+    gap: .5rem;
+    height: 8vh;
+    justify-content: flex-end;
+    padding-right: 1rem;
+    text-align: right;
     width: 100%;
 }
