--- a/assets/css/normalice.css
+++ b/assets/css/normalice.css
@@ -7,6 +7,7 @@
     --background-footer: #000;
     --background-transparencia: #21201eb8;
     --background-distintivo-transparencia: #3dbfb240;
+    --background-menu-desplegable: #3dbfb2ad;
 
     --color-fuente: #bbb;
     --color-distintivo: #3dbfb3;
