cambie la imagen de fondo de la presentacion y saque mi nombre del header en responsivo

--- a/assets/css/responsivo.css
+++ b/assets/css/responsivo.css
@@ -5,6 +5,10 @@
         align-items: center;
     }
 
+    .menu__nombre{
+        display: none;
+    }
+
     .menu__lista{
         flex-wrap: wrap;
         justify-content: center;
