corregi algunos margenes

--- a/assets/css/sobre-mi/sobre-mi-info-personal.css
+++ b/assets/css/sobre-mi/sobre-mi-info-personal.css
@@ -1,6 +1,7 @@
 .sobre-mi__info-personal{
     display: flex;
     flex-direction: column;
+    margin-top: 30px;
     min-width: 20.5rem;
     width: 50%;
 }
