--- a/assets/css/sobre-mi/sobre-mi-intereses.css
+++ b/assets/css/sobre-mi/sobre-mi-intereses.css
@@ -2,6 +2,7 @@
     align-items: flex-end;
     display: flex;
     flex-direction: column;
+    margin-top: 30px;
     min-width: 16.875rem;
     width: 50%;
 }
