--- a/assets/css/sobre-mi/sobre-mi-intereses.css
+++ b/assets/css/sobre-mi/sobre-mi-intereses.css
@@ -3,6 +3,5 @@
     display: flex;
     flex-direction: column;
     margin-top: 30px;
-    min-width: 16.875rem;
-    width: 50%;
+    min-width: 40%;
 }
